igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Starting subtest: pipe-C-legacy-gamma-reset
(kms_color:978) igt_kms-CRITICAL: Test assertion failure function igt_pipe_commit, file ../lib/igt_kms.c:2998:
(kms_color:978) igt_kms-CRITICAL: Failed assertion: ret == 0
(kms_color:978) igt_kms-CRITICAL: Last errno: 22, Invalid argument
(kms_color:978) igt_kms-CRITICAL: error: -22 != 0
Subtest pipe-C-legacy-gamma-reset failed.
- Show closed items
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
added CI feature: display/color platform: GEN9 platform: HSW labels
- Reporter
The CI Bug Log issue associated to this bug has been updated by Lakshmi Vudum.
New filters associated
- HSW GEN9: igt@kms_color@pipe-c-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5401/shard-apl4/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5401/shard-glk9/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5401/shard-hsw7/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5401/shard-kbl7/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5402/shard-apl1/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5402/shard-glk1/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5402/shard-hsw4/igt@kms_color@pipe-c-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_5402/shard-kbl7/igt@kms_color@pipe-c-legacy-gamma-reset.html
- HSW GEN9: igt@kms_color@pipe-c-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: HSW GEN9: igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "shard-hsw6", "fi-skl-6260u", "shard-apl2", "shard-hsw3", "shard-kbl5", "shard-hsw7", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-hsw5", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "fi-hsw-4770r", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "shard-glkb4", "shard-apl8", "shard-apl1", "shard-hsw8", "fi-glk-dsi", "shard-hsw4", "fi-kbl-7500u", "fi-hsw-4770", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "shard-hsw1", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "shard-hsw2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-hsw", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "fi-hsw-4200u", "fi-hsw-peppy", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-skl-caroline", "fi-apl-nasher", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "shard-skl10", "fi-apl-guc", "fi-skl-lmem", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-cml-h", "fi-cml-s", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0"] OR machine_tag IS IN ["HSW", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_color@pipe-c-legacy-gamma-reset", "igt@kms_color@pipe-b-legacy-gamma-reset", "igt@kms_color@pipe-d-legacy-gamma-reset", "igt@kms_color@pipe-a-legacy-gamma-reset"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: ret == 0\n.*\n.*error: -22 != 0'
No new failures caught with the new filter
- LAKSHMINARAYANA VUDUM changed title from igt@kms_color@pipe-c-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0 to igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
changed title from igt@kms_color@pipe-c-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0 to igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
- LAKSHMINARAYANA VUDUM closed
closed
- LAKSHMINARAYANA VUDUM reopened
reopened
- Reporter
A CI Bug Log filter associated to this bug has been updated by :
Description: BDW HSW GEN9: igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-bdw-gvtdvm", "shard-hsw6", "fi-skl-6260u", "shard-apl2", "shard-hsw3", "shard-kbl5", "shard-hsw7", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-hsw5", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "fi-hsw-4770r", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "fi-bdw-5557u", "shard-glkb4", "shard-apl8", "shard-apl1", "shard-hsw8", "fi-glk-dsi", "shard-hsw4", "fi-kbl-7500u", "fi-hsw-4770", "shard-kbl6", "shard-apl4", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "shard-hsw1", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "shard-hsw2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-hsw", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "fi-hsw-4200u", "fi-hsw-peppy", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-skl-caroline", "fi-apl-nasher", "fi-bdw-samus", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "shard-skl10", "fi-apl-guc", "fi-skl-lmem", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-cml-h", "fi-cml-s", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "fi-hsw-gt1"] OR machine_tag IS IN ["HSW", "BDW", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_color@pipe-c-legacy-gamma-reset", "igt@kms_color@pipe-b-legacy-gamma-reset", "igt@kms_color@pipe-d-legacy-gamma-reset", "igt@kms_color@pipe-a-legacy-gamma-reset"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: ret == 0\n.*\n.*error: -22 != 0'
New failures caught by the filter:
- Reporter
A CI Bug Log filter associated to this bug has been updated by :
Description: IVB BDW HSW GEN9: igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["fi-ivb-3770"] OR machine_tag IS IN ["HSW", "IVBDW", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_color@pipe-c-legacy-gamma-reset", "igt@kms_color@pipe-b-legacy-gamma-reset", "igt@kms_color@pipe-d-legacy-gamma-reset", "igt@kms_color@pipe-a-legacy-gamma-reset"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: ret == 0\n.*\n.*error: -22 != 0'
New failures caught by the filter:
- Tejasree Illipilli added platform: IVB label
added platform: IVB label
- Reporter
A CI Bug Log filter associated to this bug has been updated by Lakshmi Vudum:
Description: IVB BDW HSW GEN9: igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-bdw-gvtdvm", "shard-hsw6", "fi-skl-6260u", "shard-apl2", "shard-hsw3", "shard-kbl5", "shard-hsw7", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-hsw5", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "fi-hsw-4770r", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "fi-bdw-5557u", "shard-glkb4", "shard-apl8", "shard-apl1", "shard-hsw8", "fi-glk-dsi", "shard-hsw4", "fi-kbl-7500u", "fi-hsw-4770", "shard-kbl6", "shard-apl4", "fi-ivb-3770", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "shard-hsw1", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "shard-hsw2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-hsw", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "fi-hsw-4200u", "fi-hsw-peppy", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-skl-caroline", "fi-apl-nasher", "fi-bdw-samus", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "shard-skl10", "fi-apl-guc", "fi-skl-lmem", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-cml-h", "fi-cml-s", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "fi-hsw-gt1"] OR machine_tag IS IN ["IVB", "HSW", "BDW", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_color@pipe-c-legacy-gamma-reset"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: ret == 0\n.*\n.*error: -22 != 0'
No new failures caught with the new filter
- Reporter
A CI Bug Log filter associated to this bug has been updated by :
Description: IVB BDW HSW GEN9: igt@kms_color@pipe-[abcd]-legacy-gamma-reset - fail - Failed assertion: ret == 0, error: -22 != 0
Equivalent query: runconfig_tag IS IN ["DRM-TIP"] AND (machine_name IS IN ["shard-kbl3", "fi-glk-1", "shard-glkb1", "shard-glkb3", "shard-apl6", "fi-skl-6770hq", "fi-bdw-gvtdvm", "shard-hsw6", "fi-skl-6260u", "shard-apl2", "shard-hsw3", "shard-kbl5", "shard-hsw7", "fi-bxt-j4205", "shard-kbl4", "shard-glkb6", "shard-hsw5", "shard-glkb2", "shard-kbl7", "fi-skl-6700hq", "fi-skl-6600u", "fi-hsw-4770r", "shard-apl5", "shard-apl7", "fi-bxt-dsi", "fi-bdw-5557u", "shard-glkb4", "shard-apl8", "shard-apl1", "shard-hsw8", "fi-glk-dsi", "shard-hsw4", "fi-kbl-7500u", "fi-hsw-4770", "shard-kbl6", "shard-apl4", "fi-ivb-3770", "shard-glkb5", "shard-kbl1", "fi-kbl-7560u", "shard-apl3", "shard-hsw1", "fi-skl-6700k2", "fi-kbl-r", "fi-kbl-7567u", "fi-cfl-s2", "shard-hsw2", "fi-skl-gvtdvm", "shard-kbl2", "fi-skl-guc", "fi-cfl-8700k", "fi-cfl-u", "fi-cfl-s3", "fi-glk-j4005", "shard-apl", "shard-glk", "shard-hsw", "shard-kbl", "shard-glk1", "shard-glk3", "shard-glk4", "shard-glk5", "shard-glk2", "shard-glkb", "shard-glk8", "shard-glk6", "shard-glk7", "pig-skl-6600", "pig-glk-j4005", "fi-hsw-4200u", "fi-hsw-peppy", "pig-glk-j5005", "fi-cfl-guc", "fi-kbl-guc", "fi-cfl-u2", "pig-skl-6260u", "fi-whl-u", "fi-kbl-x1275", "shard-glk9", "fi-cfl-8109u", "fi-skl-iommu", "fi-kbl-8809g", "fi-skl-caroline", "fi-apl-nasher", "fi-bdw-samus", "fi-kbl-soraka", "shard-skl", "shard-skl1", "shard-skl2", "shard-skl3", "shard-skl4", "shard-skl5", "shard-skl6", "shard-skl7", "shard-skl8", "shard-skl9", "shard-skl10", "fi-apl-guc", "fi-skl-lmem", "fi-cml-u", "re-cml-u", "fi-cml-u2", "fi-cml-h", "fi-cml-s", "shard-apl0", "shard-glk0", "shard-kbl0", "shard-skl0", "fi-hsw-gt1"] OR machine_tag IS IN ["IVB", "HSW", "BDW", "GEN9"]) AND ((testsuite_name = "IGT" AND test_name IS IN ["igt@kms_color@pipe-c-legacy-gamma-reset", "igt@kms_color@pipe-b-legacy-gamma-reset"])) AND ((testsuite_name = "IGT" AND status_name IS IN ["fail"])) AND stderr ~= 'Failed assertion: ret == 0\n.*\n.*error: -22 != 0'
New failures caught by the filter:
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5984/shard-apl2/igt@kms_color@pipe-b-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5984/shard-kbl2/igt@kms_color@pipe-b-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/IGT_5984/shard-skl3/igt@kms_color@pipe-b-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_9713/shard-apl2/igt@kms_color@pipe-b-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_9713/shard-kbl6/igt@kms_color@pipe-b-legacy-gamma-reset.html
- https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_9713/shard-skl4/igt@kms_color@pipe-b-legacy-gamma-reset.html
- Reporter
Issue is reproducing on KBL with IGT_5989 and CI_DRM_9729
Issue is not reproducing on HSW with IGT_5990 and CI_DRM_9730
Issue is not reproducing on IVB with IGT_5980 and drmtip_765
- Developer
commit 7e07c68f06a248441b485249de4c4115cba262cc Author: Ville Syrjälä <ville.syrjala@linux.intel.com> Date: Fri Feb 5 22:23:22 2021 +0200 drm/i915: Nuke INTEL_OUTPUT_FORMAT_INVALID
should fix this.
- Ville Syrjälä closed
closed
- Ville Syrjälä mentioned in commit FireBurn/linux@ed428ffc
mentioned in commit FireBurn/linux@ed428ffc
- Reporter
The CI Bug Log issue associated to this bug has been archived.
New failures matching the above filters will not be associated to this bug anymore.