BACKPORT/FROMGIT: drm/i915: Nuke INTEL_OUTPUT_FORMAT_INVALID

We tend to use output_format!=RGB as a shorthand for YCbCr, but
this fails if we have a disabled crtc where output_format==INVALID.
We're now getting some fail from intel_color_check() when we have:
 hw.enable==false
 hw.ctm!=NULL
 output_format==INVALID

Let's avoid that by throwing INTEL_OUTPUT_FORMAT_INVALID to the
dumpster, and thus everything defaults to RGB when the crtc
is disabled.

This does beg the deeper question of how much of the state
should we in fact be validating when hw/uapi.enable==false.
And should we even be doing the uapi->hw copy when
uapi.enable==false? So far I've not been able to come up with
satisfactory answers for myself, so I'm putting it off for the
moment.

Cc: Lee Shawn C <shawn.c.lee@intel.com>
Fixes: 0aa5c3835c8a ("drm/i915: support two CSC module on gen11 and later")
Closes: https://gitlab.freedesktop.org/drm/intel/-/issues/2964
Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Link: https://patchwork.freedesktop.org/patch/msgid/20210205202322.27608-1-ville.syrjala@linux.intel.com
Reviewed-by: José Roberto de Souza <jose.souza@intel.com>
(cherry picked from commit 7e07c68f06a248441b485249de4c4115cba262cc
 https://anongit.freedesktop.org/git/drm-intel.git drm-intel-next)
Signed-off-by: Lee Shawn C <shawn.c.lee@intel.com>

BUG=b:178674272
TEST=DUT can pass HDMI 2.0 source compliance YCbCr 420 related
     test cases (1-31, 1-33 or 1-51).

Conflicts: drivers/gpu/drm/i915/display/intel_crtc.c
        This file is not availabe in kernel 5.4. Apply the
        change to intel_crtc_state_reset() in intel_display.c.
Change-Id: Ie5c6b8716ab1869640d17c79a674a877de0d24e8
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/third_party/kernel/+/2709910
Reviewed-by: Alex Levin <levinale@google.com>
Commit-Queue: Shawn C Lee <shawn.c.lee@intel.com>
Tested-by: Shawn C Lee <shawn.c.lee@intel.com>